feat(dev): added fonts

--- a/src/components/ services/services-item/styles.module.scss
+++ b/src/components/ services/services-item/styles.module.scss
@@ -51,7 +51,7 @@
   align-items: center;
   justify-content: space-between;
   text-decoration: none;
-  font-family: 'Bebas Neue';
+  font-family: 'Bebas Neue', sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 16px;
