--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -20,6 +20,17 @@ body{
 
 @font-face {
   font-family: Proxima Nova;
+  src: url("assets/fonts/Gilroy-Bold.ttf");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: Gilroy;
+  src: url("assets/fonts/Gilroy-Regular.ttf");
+}
+
+@font-face {
+  font-family: Gilroy;
   src: url("assets/fonts/ProximaNova-Bold.ttf");
   font-weight: bold;
 }
