--- a/src/components/ commercial/styles.module.scss
+++ b/src/components/ commercial/styles.module.scss
@@ -33,7 +33,7 @@
 }
 
 .infoTitle {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', sans-serif;
   font-weight: 800;
   font-size: 42px;
   line-height: 51px;
@@ -85,7 +85,7 @@
 }
 
 .infoButtonText {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', sans-serif;
   font-weight: 800;
   font-size: 12px;
   line-height: 15px;
