--- a/src/components/benefit/styles.module.scss
+++ b/src/components/benefit/styles.module.scss
@@ -35,7 +35,7 @@
 }
 
 .wrapperTitle {
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', sans-serif;
   font-weight: 800;
   font-size: 32px;
   line-height: 42px;
