--- a/src/components/work/styles.module.scss
+++ b/src/components/work/styles.module.scss
@@ -13,10 +13,10 @@
 }
 
 .title {
-  font-family: 'Bebas Neue';
+  font-family: 'Bebas Neue', sans-serif;
   font-weight: 700;
   font-size: 80px;
-  line-height: 64px;
+  line-height: 74px;
   text-align: center;
   letter-spacing: 5px;
   background: linear-gradient(180deg, $light-blue 0%, rgba(0, 78, 134, 0.8) 100%);
@@ -35,7 +35,7 @@
 
 .subtitle {
   max-width: 503px;
-  font-family: 'Gilroy';
+  font-family: 'Gilroy', sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 28px;
